--- a/src/Components/MovieTrailerFilms.css
+++ b/src/Components/MovieTrailerFilms.css
@@ -1,25 +1,22 @@
 .movie-trailer-section-title {
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 2%;
+  margin-right: 2%;
   margin-bottom: 40px;
 }
 
 .movie-trailer-section {
   display: flex;
-  margin-left: 2%;
-  margin-right: 2%;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin: 2%;
 }
 
-.movie-trailer-section-left {
+/* .movie-trailer-section-left {
   margin-top: 10px;
   margin-bottom: 10px;
   margin-right: 10px;
-}
+} */
+
 .movie-trailer-section-mid {
   margin-top: 10px;
-
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   padding: 10px;
@@ -30,14 +27,22 @@
   flex: 20%;
 }
 
-.movie-trailer-section-right {
+/* .movie-trailer-section-right {
   margin-top: 10px;
   margin-bottom: 10px;
   margin-right: 10px;
-}
+} */
 
 .movie-trailer-section Button {
-  height: 180px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  height: 100%;
+  padding: 10px;
+  margin: 10% 5% 0% 5%;
+  font-size: 2.5em;
+  background-color: #212121;
+  border: none;
+}
+
+.movie-trailer-section-mid-video iframe{
+  width: 100%;
+  height: 200px;
 }
