--- a/src/Components/MovieTrailerFilms.css
+++ b/src/Components/MovieTrailerFilms.css
@@ -39,7 +39,8 @@
   padding: 10px;
   margin: 10% 5% 0% 5%;
   font-size: 2.5em;
-  background-color: #212121;
+  /* background-color: #212121; */
+  background-color: transparent;
   border: none;
 }
 
