--- a/src/sass/pages/home.scss
+++ b/src/sass/pages/home.scss
@@ -26,7 +26,7 @@
 }
 
 .films{
-    border-bottom: 5px solid gray;
+    border-bottom: 0.1rem solid gray;
     margin: 0 3%;
 
     &__name{
@@ -45,16 +45,82 @@
         float: left;
         width:calc((100%  - 11 * #{$gutter-horizontal}) / 10);
         margin-left: $gutter-horizontal;
+        & Button{
+            height: 50%;
+            padding: 1rem;
+            margin: 10% 5% 0% 5%;
+            font-size: 2.5em;
+            background-color: transparent;
+            border: none;
+
+            &:hover{
+                background-color: #212121;
+
+            }
+        }
     }
 
     &--mid{
         float: left;
-        width:calc( ((100%  -  3 * #{$gutter-horizontal}) / 4) * 3 + 2 * #{$gutter-horizontal});
+        width:calc( ((100%  -  3 * #{$gutter-horizontal}) /3.5 )* 3 + 2 * #{$gutter-horizontal});
+        & img{
+            width: 100% ;
+        }
     }
 
     &--right{
         float: left;
         width:calc((100%  - 11 * #{$gutter-horizontal}) / 10);
        
+        & Button{
+            height: 50%;
+            padding: 1rem;
+            margin: 10% 5% 0% 5%;
+            font-size: 2.5em;
+            background-color: transparent;
+            border: none;
+
+            &:hover{
+                background-color: #212121;
+
+            }
+        }
+
     }
+
+}
+
+.individual-card{
+    width:calc( ((100% - 3 * #{$gutter-horizontal}) / 3.2));
+    float: left;
+    font-size: 2rem;
+    text-align: center;
+
+    &:not(:last-child){
+        margin-left: $gutter-horizontal;
+    }
+}
+
+
+
+.card-video{
+
+    &__details{
+        text-align: center;
+        padding: 4%;
+        
+        & button{
+            width:50%;
+            background-color: transparent;
+        }
+    }
+
+    & iframe{
+        width: 100%;
+        height:200px;
+        background-color: black;
+        padding: 4%; 
+    }
+
+    
 }
